# omnimeter

app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/bryan/app/: MainActivity.kt
app/lib/: main.dart
app/lib/charts/: icon_legend_vertical.dart  line.dart  pie.dart  temp_bar.dart
app/lib/models/: cpu.dart
app/linux/: CMakeLists.txt
server/: .gitignore  README.md  install.sh  install_service_windows.bat  omnimeter.desktop.example  omnimeter.lnk  omnimeter.service.example  plugin_interface.py  requirements-windows.txt  requirements.txt  run.sh.example  server.py  up.sh
server/omnimeter/: main.py  plugin_interface.py  pyproject.toml
server/omnimeter/lib/windows/python3.7.9/Scripts/: cpuinfo-script.py
server/omnimeter/plugins/: bluetooth.py  connections.py  cpu.py  display.py  gpu_nvidia.py  standing_desk.py
server/omnimeter/plugins/disabled/: bluetooth.py
server/plugins/: cpu.py  gpu_nvidia.py
