[project]
name = "omnimeter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appdirs==1.4.4",
    "certifi==2021.5.30",
    "click==8.0.1",
    "flask==2.0.1",
    "flask-cors==3.0.10",
    "itsdangerous==2.0.1",
    "jinja2==3.0.1",
    "markupsafe==2.0.1",
    "mypy-extensions==0.4.3",
    "pathspec==0.8.1",
    "psutil==5.8.0",
    "py-cpuinfo==8.0.0",
    "pysimpleguiqt==0.35.0",
    "werkzeug==2.0.1",
]
